tests/syntax_errors/fn_ret_missing_colon.out
error: fn_ret_missing_colon.li 1,8: unexpected token `int`, expecting colon or `pipe`
    1 | fn f() int {}
      |        ^^^
